--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -269,6 +269,7 @@ jobs:
           cache: 'pip'
 
       - name: 安装依赖
+        shell: bash
         run: |
           python -m pip install --upgrade pip
           pip install nuitka
