docs: 更新手势管理模块文档，添加新子选项卡详细说明
docs: 更新手势管理模块文档，添加新子选项卡详细说明
fix: 修复工作流中的小错误.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -884,13 +884,8 @@ jobs:
             changelog="${changelog}### 🔧 构建和维护\n\n${chores}\n"
           fi
           
-          # 其他变更
-          if [[ -n "$others" ]]; then
-            changelog="${changelog}### 📦 其他变更\n\n${others}\n"
-          fi
-          
           # 如果没有任何变更记录，显示提示信息
-          if [[ "$breaking_changes" == "" && "$features" == "" && "$fixes" == "" && "$docs" == "" && "$styles" == "" && "$refactors" == "" && "$performances" == "" && "$tests" == "" && "$chores" == "" && "$others" == "" ]]; then
+          if [[ "$breaking_changes" == "" && "$features" == "" && "$fixes" == "" && "$docs" == "" && "$styles" == "" && "$refactors" == "" && "$performances" == "" && "$tests" == "" && "$chores" == "" ]]; then
             changelog="${changelog}*本次版本更新未包含符合 Conventional Commits 格式的提交信息*\n"
           fi
           
